--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,7 +21,7 @@
     <input id="submitButton" type="submit" name="submit" value="Submit">
   </form>
 
-  <section id="cost">Total Cost: $<%=result%></section>
+  <section id="cost"><%=result%></section>
 
 </main>
 
